fix position and z-index of fab menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,7 @@
     overflow: inherit;
   }
 }
+
+.form-container {
+  width: 50vw;
+}
